FLY wire David/force-app/main/default/objects/OPP_ARR_Travel_Domestic_Cost_Rate__mdt/OPP_ARR_Travel_Domestic_Cost_Rate__mdt.object-meta.xml
<CustomObject>
    <label>OPP ARR Travel Domestic Cost Rate</label>
    <pluralLabel>OPP ARR Travel Domestic Cost Rates</pluralLabel>
</CustomObject>