FLY wire David/force-app/main/default/objects/OPP_ARR_Travel_Domestic_Cost_Rate__mdt/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <label>Account Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>