FLY wire David/force-app/main/default/objects/OPP_ARR_Travel_Domestic_Cost_Rate__mdt/fields/Account_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry__c</fullName>
    <label>Account Sub Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>