FLY wire David/force-app/main/default/objects/OPP_ARR_Travel_Domestic_Cost_Rate__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>