FLY wire David/force-app/main/default/objects/OPP_ARR_Travel_Domestic_Cost_Rate__mdt/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <label>Utilization</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>